--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "incremental": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES2023",
+    "target": "esnext",
     "lib": ["ES2023"],
     "module": "ESNext",
     "types": ["node"],
@@ -18,9 +19,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
 }
